fix spacing

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -479,8 +479,8 @@
   line-height: 13px;
   padding: 2px 6px;
   position: absolute;
-  right: -2px;
-  top: -2px;
+  right: -5px;
+  top: -3px;
 }
 
 
@@ -1173,7 +1173,7 @@ h2 {
 .x_panel {
   position: relative;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   padding: 10px 17px;
   display: inline-block;
   background: #fff;
